# BigStr

./: .gitignore  Cargo.toml  README.md
src/: arg.rs  main.rs  marching.rs  render.rs
